# TempChat

./: README.md  next.config.mjs  package-lock.json  package.json  tailwind.config.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  structs.rs  utils.rs
src-tauri/src/client/: client.rs  proto.rs
src-tauri/src/server/: chat.rs  mod.rs  proto.rs
src-tauri/src/server/socket/: handle.rs
src-tauri/src/socket/: handle.rs  mod.rs  proto.rs
src/app/: layout.js  page.js  providers.js
src/app/chat/: page.js
src/app/create/: page.js
src/app/handle/: page.js
src/components/: BackArrow.js  ChatBubble.js  JoinLeave.js  JoinMessage.js
