[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
default-run = "app"
edition = "2021"
rust-version = "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.5.4", features = ["process-exit"] }
tokio = { version = "1.36.0", features = ["full"] }
tokio-tungstenite = "*"
rand = "0.8.5"
futures-util = "0.3.30"
localtunnel-client = "0.1.2"
nanoid = "0.4.0"
once_cell = "1.19.0"
uuid = { version = "1.7.0", features = ["v4"] }
chrono = "0.4.34"
tracing = "0.1"
rsa = "0.9.6"
aes-siv = "0.7.0"
hex = "0.4.3"
bcrypt = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = [ "tauri/custom-protocol" ]
